# slimfmt

./: .gitattributes  CMakeLists.txt  Driver.cpp  LICENSE  README.md
src/: Slimfmt.cpp  Slimfmt.hpp
